# splash

./: README.md
CMakeProject/splash/splash/: CMakeLists.txt  IncludeBitmapImage.hpp  splash.cpp
CMakeProject/splash/splash/splash/source/: Colour.cpp  ColourUtils.cpp
